@@ -137,6 +137,7 @@
     * 0971 FIX: Fix missing authentication of PHP addons in D-WATO when activation mode is reload...
     * 0972 FIX: Do not loose site specific global settings anymore when chaning a site's configuration...
     * 0933 FIX: WATO snapshots: excluded some superfluous files from nagvis backup domaim...
+    * 0813 FIX: LDAP: Improved slightly missleading logging of LDAP sync actions...
     * 0935 FIX: CPU utilization: increased maximum value to 10000...
     * 0937 FIX: Fixed exception with table search functionality...
 
